Fix align of buttons

--- a/components/Common/ErrorPage/ErrorPageNew.css
+++ b/components/Common/ErrorPage/ErrorPageNew.css
@@ -99,6 +99,15 @@
   #notfound .notfoundInfo .notfoundTitle {
     font-size: 40px;
   }
+  #notfound .notfoundInfo .notfoundLinks {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+  }
+  #notfound .notfoundLinks .notfoundLink button {
+    margin: 10px 10px;
+  }
 }
 @media only screen and (max-width: 540px) {
   #notfound {
@@ -124,18 +133,5 @@
     padding: 50px 0 0px 0px;
 
     width: 90%;
-  }
-  #notfound .notfoundInfo .notfoundTitle {
-    font-size: 30px;
-  }
-
-  #notfound .notfoundInfo .notfoundLinks {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    flex-wrap: wrap;
-  }
-  #notfound .notfoundLinks .notfoundLink button {
-    margin: 10px 10px;
   }
 }
